# Labrador3D

./: 01-cmake.sh  02-opencv.sh  03-openmvg.sh  README.md  build_appBoard.sh  build_labrador3D.sh  build_sjpeg.sh  cmake.sh  config.sh  network.sh  opencv.sh  openmvg.sh
appBoard/: CMakeLists.txt  labrador3D.sh  labrador3d.sh
appBoard/src/01_recebe_comandos/: CMakeLists.txt  placa_recebe_comandos.cpp
appBoard/src/02_tira_foto/: CMakeLists.txt  placa_tirar_foto.cpp
appBoard/src/03_processa/: CMakeLists.txt
appBoard/src/04_envia_imagem/: CMakeLists.txt  placa.cpp
appCentral/: CMakeLists.txt  calibration.sh  full_reconstruction.sh  instructions.txt  known_poses.sh  others_instructions.txt
appCentral/instructions/: instructions.txt  sfm_regions_provider.hpp
appCentral/src/: description.txt
appCentral/src/dataInit/: CMakeLists.txt  dataInit.cpp
appCentral/src/export2MVE/: CMakeLists.txt  export2MVE.cpp
appCentral/src/sequentialSFM/: CMakeLists.txt  sequentialSFM.cpp
appCentral/src/takePictures/: CMakeLists.txt  takePictures.cpp
appCentral/src/triangulation/: CMakeLists.txt  triangulation.cpp
labrador-mvg-test/: CMakeLists.txt  labrador-mvg-test-1.cpp  labrador-mvg-test-2.cpp
labrador3D/: CMakeLists.txt
labrador3D/01_recebe_comandos/: CMakeLists.txt  placa_recebe_comandos.cpp
labrador3D/04_envia_imagem/: CMakeLists.txt  placa.cpp
labrador3D/src/01_recebe_comandos/: placa_recebe_comandos.cpp
labrador3D/src/02_tira_foto/: CMakeLists.txt  placa_tirar_foto.cpp
labrador3D/src/03_processa/: CMakeLists.txt  processa.cpp
openMVG-short/: CMakeLists.txt  remove.sh
openMVG-short/openMVG/: CMakeLists.txt
sjpeg/: CMakeLists.txt
